--- a/Alpine/PowerDNS/roles/alpine_postgresql/defaults/main.yml
+++ b/Alpine/PowerDNS/roles/alpine_postgresql/defaults/main.yml
@@ -1,4 +1,15 @@
 ---
 # defaults file for postgresql
 
+pg_version: "9.6"
+pg_db_name: "example"
+pg_db_user: "example"
+pg_db_pass: "example"
+pg_db_priv: "ALL"
 pg_db_encoding: "UTF8"
+pg_listen_addr: "'*'"
+pg_data_dir: "/var/lib/postgresql/{{ pg_version}}/data"
+pg_repl_user: "repl"
+pg_repl_pass: "repl"
+
+...
