--- a/Alpine/PowerDNS/roles/alpine_powerdns/defaults/main.yml
+++ b/Alpine/PowerDNS/roles/alpine_powerdns/defaults/main.yml
@@ -1,2 +1,11 @@
 ---
 # defaults file for alpine_powerdns
+
+pg_db_name:                pdns
+pg_db_user:                pdnsuser
+pg_db_pass:                pdnspass
+pg_listen_addr:            "'127.0.0.1'"
+pdns_listen_addr:          127.0.0.1
+pdns_listen_port:          5353
+pdns_recursor_listen_addr: 127.0.0.1
+pdns_recursor_listen_port: 53
