--- a/Alpine/PowerDNS/Provision.yml
+++ b/Alpine/PowerDNS/Provision.yml
@@ -8,12 +8,12 @@
     pg_listen_addr: "'127.0.0.1'"
   roles:
     - { role: alpine_postgresql }
-    - { role: alpine_powerdns, authoritive: true, postgresql: true }
+    - { role: alpine_powerdns, pdns_authoritive: true, pdns_postgresql: true, pdns_listen_addr: "{{ ansible_eth1.ipv4.address }}" }
 
 - hosts: dev-powerdns-02
   become: true
   roles:
-    - { role: alpine_powerdns, recursor: true }
+    - { role: alpine_powerdns, pdns_recursor: true, pdns_recursor_listen_addr: "{{ ansible_eth1.ipv4.address }}", pdns_recursor_forward_zones: "powerdns.net=10.0.0.11" }
 
 - hosts: dev-powerdns-03
   become: true
@@ -24,5 +24,6 @@
     pg_listen_addr: "'127.0.0.1'"
   roles:
     - { role: alpine_postgresql }
-    - { role: alpine_powerdns, recursor: true, authoritive: true, postgresql: true }
+    - { role: alpine_powerdns, pdns_recursor: true, pdns_authoritive: true, pdns_postgresql: true, pdns_recursor_listen_addr: "{{ ansible_eth1.ipv4.address }}", pdns_listen_addr: 127.0.0.1, pdns_recursor_forward_zones: "powerdns.net=127.0.0.1" }
+
 ...
