--- a/Alpine/PowerDNS/roles/alpine_powerdns/tasks/main.yml
+++ b/Alpine/PowerDNS/roles/alpine_powerdns/tasks/main.yml
@@ -5,46 +5,64 @@
   apk:
     name: pdns-recursor
     state: present
-  when: recursor
-- name: Install PowerDNS authoritive
+  when: pdns_recursor is defined
+
+- name: Install PowerDNS authoritive server
   apk:
     name: pdns
     state: present
-  when: authoritive
+  when: pdns_authoritive is defined
+
 - name: Install PowerDNS PostgreSQL backend
   apk:
     name: pdns-backend-pgsql
     state: present
-  when: authoritive and postgresql
+  when: 
+     - pdns_authoritive is defined
+     - pdns_postgresql is defined
+
 - name: Configure PowerDNS authoritive
   template:
     src: pdns.postgresql.conf.j2
     dest: /etc/pdns/pdns.conf
-  when: authoritive and postgresql
-- name: Configure PowerDNS recursor
-  template:
-    src: recursor.conf.j2
-    dest: /etc/pdns/recursor.conf
-  when: recursor
+  when: 
+     - pdns_authoritive is defined
+     - pdns_postgresql is defined
+  notify: Reload pdns
+
 - name: Copy PowerDNS Table setup
   template:
     src: powerdns.sql.j2
     dest: /var/lib/postgresql/powerdns.sql
-  when: authoritive and postgresql
+  when: 
+     - pdns_authoritive is defined
+     - pdns_postgresql is defined
+
 - name: Create PowerDNS Tables 
   shell: su postgres -c "psql {{ pg_db_name }} < /var/lib/postgresql/powerdns.sql"
-  when: authoritive and postgresql
+  when: 
+     - pdns_authoritive is defined
+     - pdns_postgresql is defined
+
+- name: Configure PowerDNS recursor
+  template:
+    src: recursor.conf.j2
+    dest: /etc/pdns/recursor.conf
+  when: pdns_recursor is defined
+  notify: Restart pdns-recursor
+
 - name: Start PowerDNS recursor
   service:
     name: pdns-recursor
     state: started
     enabled: true
-  when: recursor
+  when: pdns_recursor is defined
+
 - name: Start PowerDNS authoritive
   service:
     name: pdns
     state: started
     enabled: true
-  when: authoritive
+  when: pdns_authoritive is defined
 
 ...
