--- a/Alpine/PowerDNS/Provision.yml
+++ b/Alpine/PowerDNS/Provision.yml
@@ -8,7 +8,7 @@
     pg_listen_addr: "'127.0.0.1'"
   roles:
     - { role: alpine_postgresql }
-    - { role: alpine_powerdns, pdns_authoritive: true, pdns_postgresql: true, pdns_listen_addr: "{{ ansible_eth1.ipv4.address }}" }
+    - { role: alpine_powerdns, pdns_authoritive: true, pdns_postgresql: true, pdns_auth_listen_addr: "{{ ansible_eth1.ipv4.address }}" }
 
 - hosts: dev-powerdns-02
   become: true
@@ -25,6 +25,6 @@
   roles:
     - { role: alpine_postgresql }
     - { role: alpine_powerdns, pdns_recursor: true, pdns_recursor_listen_addr: "{{ ansible_eth1.ipv4.address }}", pdns_recursor_forward_zones: "powerdns.net=127.0.0.1" }
-    - { role: alpine_powerdns, pdns_authoritive: true, pdns_postgresql: true, pdns_listen_addr: 127.0.0.1 }
+    - { role: alpine_powerdns, pdns_authoritive: true, pdns_postgresql: true, pdns_auth_listen_addr: 127.0.0.1 }
 
 ...
