--- a/Alpine/Nginx/roles/alpine_nginx/tasks/main.yml
+++ b/Alpine/Nginx/roles/alpine_nginx/tasks/main.yml
@@ -21,10 +21,22 @@
     update_cache: yes
   when: php7 is defined
 
-- name: Configure a default nginx  
+- name: Configure a default nginx conf
   template: 
     src: default.conf.j2
     dest: /etc/nginx/conf.d/default.conf
+  notify: Reload nginx
+
+- name: Configure a default nginx index.html
+  template: 
+    src: index.html.j2
+    dest: /var/www/localhost/htdocs/index.html
+    
+- name: Configure a default nginx index.php
+  template: 
+    src: index.php.j2
+    dest: /var/www/localhost/htdocs/index.php
+  when: php5 is defined or php7 is defined
     
 - name: Start Nginx
   service:
