--- a/Alpine/MariaDB/roles/alpine_mariadb/tasks/main.yml
+++ b/Alpine/MariaDB/roles/alpine_mariadb/tasks/main.yml
@@ -18,6 +18,33 @@
   args:
     creates: /var/lib/mysql/mysql/
 
+- name: Listen on socket only
+  ini_file:
+    dest: '/etc/mysql/my.cnf'
+    section: mysqld
+    option: skip-networking
+    value: on
+  when: mariadb_listen_addr is undefined
+  notify: Restart mariadb
+
+- name: Change listen address
+  ini_file:
+    dest: '/etc/mysql/my.cnf'
+    section: mysqld
+    option: bind-address
+    value: "{{ mariadb_listen_addr }}"
+  when: mariadb_listen_addr is defined
+  notify: Restart mariadb
+
+- name: Listen NOT on socket only
+  ini_file:
+    dest: '/etc/mysql/my.cnf'
+    section: mysqld
+    option: skip-networking
+    value: off
+  when: mariadb_listen_addr is defined
+  notify: Restart mariadb
+
 - name: Start MariaDB
   service:
     name: mariadb
