Trying a more complex MariaDB setup

--- a/Alpine/MariaDB/Provision.yml
+++ b/Alpine/MariaDB/Provision.yml
@@ -3,16 +3,16 @@
 - hosts: dev-mariadb-01
   become: true
   roles:
-    - { role: alpine_mariadb, mysql_db_name: test, mysql_db_user: test, mysql_db_pass: test }
+    - { role: alpine_mariadb, mariadb_name: test, mariadb_user: test, mariadb_pass: test }
 
 - hosts: dev-mariadb-02
   become: true
   roles:
-    - { role: alpine_mariadb, mysql_db_name: test, mysql_db_user: test, mysql_db_pass: test, mariadb_listen_addr: "{{ ansible_eth1.ipv4.address }}" }
+    - { role: alpine_mariadb, mariadb_name: test, mariadb_user: test, mariadb_pass: test, mariadb_listen_addr: "{{ ansible_eth1.ipv4.address }}" }
 
 - hosts: dev-mariadb-03
   become: true
   roles:
-    - { role: alpine_mariadb }
+    - { role: alpine_mariadb, mariadb_name: test, mariadb_user: test, mariadb_pass: test, mariadb_listen_addr: "{{ ansible_eth1.ipv4.address }}" }
 
 ...
