--- a/Alpine/MariaDB/Provision.yml
+++ b/Alpine/MariaDB/Provision.yml
@@ -3,16 +3,16 @@
 - hosts: dev-mariadb-01
   become: true
   roles:
-    - { role: alpine_mariadb, mariadb_name: test, mariadb_user: test, mariadb_pass: test }
+    - { role: alpine_mariadb, mariadb_name: wordpress, mariadb_user: wp_user, mariadb_pass: wp_pass }
 
 - hosts: dev-mariadb-02
   become: true
   roles:
-    - { role: alpine_mariadb, mariadb_master: yes, mariadb_name: test, mariadb_user: test, mariadb_pass: test, mariadb_listen_addr: "{{ ansible_eth1.ipv4.address }}" }
+    - { role: alpine_mariadb, mariadb_master: yes, mariadb_name: wordpress, mariadb_user: wp_user, mariadb_pass: wp_pass, mariadb_listen_addr: "{{ ansible_eth1.ipv4.address }}" }
 
 - hosts: dev-mariadb-03
   become: true
   roles:
-    - { role: alpine_mariadb, mariadb_slave: yes, mariadb_name: test, mariadb_user: test, mariadb_pass: test, mariadb_listen_addr: "{{ ansible_eth1.ipv4.address }}" }
+    - { role: alpine_mariadb, mariadb_slave: yes, mariadb_name: wordpress, mariadb_master_addr: '10.0.0.12', mariadb_listen_addr: "{{ ansible_eth1.ipv4.address }}" }
 
 ...
