A new role: Jenkins

--- a/Alpine/Rocket.Chat/roles/alpine_rocketchat/tasks/main.yml
+++ b/Alpine/Rocket.Chat/roles/alpine_rocketchat/tasks/main.yml
@@ -19,8 +19,7 @@
     state: present
     update_cache: yes
   with_items:
-     - g\+\+
-     - make
+     - alpine-sdk
      - graphicsmagick
      - tar
 
