Added correct initscripts for jenkins and gogs

--- a/Alpine/GoGS/roles/alpine_gogs/files/app.ini
+++ b/Alpine/GoGS/roles/alpine_gogs/files/app.ini
@@ -19,8 +19,8 @@ DOMAIN           = localhost
 HTTP_PORT        = 3000
 ROOT_URL         = http://localhost:3000/
 DISABLE_SSH      = false
-SSH_PORT         = 22
-START_SSH_SERVER = false
+SSH_PORT         = 2222
+START_SSH_SERVER = true
 OFFLINE_MODE     = false
 
 [mailer]
