--- a/Alpine/Jenkins/roles/alpine_jenkins/tasks/main.yml
+++ b/Alpine/Jenkins/roles/alpine_jenkins/tasks/main.yml
@@ -28,6 +28,12 @@
       src: jenkins.init.d
       dest: /etc/init.d/jenkins
       mode: 0755  
+
+- name: Install Jenkins conf.d
+  copy:
+      src: jenkins.conf.d
+      dest: /etc/conf.d/jenkins
+      mode: 0440
       
 - name: Start jenkins
   service:
