--- a/Alpine/Rocket.Chat/roles/alpine_rocketchat/tasks/main.yml
+++ b/Alpine/Rocket.Chat/roles/alpine_rocketchat/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # tasks file for alpine_rocketchat
 
-- name: Enable edge community repository
+- name: Enable edge 3.3 community repository
   lineinfile:
     dest: /etc/apk/repositories
     line: "http://dl-cdn.alpinelinux.org/alpine/v3.3/main"
@@ -23,24 +23,39 @@
      - graphicsmagick
      - tar
 
-- name: Create startup script
-  template:
-     src: start_rocketchat.sh.j2
-     dest: /root/start_rocketchat.sh
-     mode: 0500  
+- name: Create /opt/rocketchat
+  file:
+     dest: /opt/rocketchat
+     state: directory
+     mode: 0755  
+
+- name: Install init.d
+  copy:
+     src: rocketchat.init.d
+     dest: /etc/init.d/rocketchat
+     mode: 0755
+    
+- name: Install conf.d
+  copy:
+     src: rocketchat.conf.d
+     dest: /etc/conf.d/rocketchat
+     mode: 0440
    
 - name: Download and extract RocketChat
   unarchive:
      src: https://rocket.chat/releases/latest/download
-     dest: /root
+     dest: /opt/rocketchat
      remote_src: True
      validate_certs: False
-     creates: /root/bundle 
+     creates: /opt/rocketchat/bundle 
    
 - name: Run node install on RocketChat source
-  shell: "cd /root/bundle/programs/server && /usr/bin/npm install --unsafe-perm && touch /root/build.done"
+  shell: "cd /opt/rocketchat/bundle/programs/server && /usr/bin/npm install --unsafe-perm && touch /root/build.done"
   args:
     creates: /root/build.done 
   
-- name: Run RocketChat
-  shell: "bash /root/start_rocketchat.sh"
+- name: Start RocketChat
+  service:
+      name: rocketchat
+      state: started
+      enabled: true
