Elasticsearch is now a cluster

--- a/Alpine/Elasticsearch/Provision.yml
+++ b/Alpine/Elasticsearch/Provision.yml
@@ -3,11 +3,11 @@
 - hosts: dev-es-01
   become: true
   roles:
-    - { role: alpine_elasticsearch }
+    - { role: alpine_elasticsearch, es_listen_addr: "{{ ansible_eth1.ipv4.address }}" }
 
-- hosts: dev-es-02
+- hosts: dev-es-02,dev-es-03,dev-es-04
   become: true
   roles:
-    - { role: alpine_elasticsearch }
+    - { role: alpine_elasticsearch, es_listen_addr: "{{ ansible_eth1.ipv4.address }}", es_unicast_host: 10.0.0.11 }
 
 ...
