Run as user git and log to /var/log/gogs

--- a/Alpine/GoGS/roles/alpine_gogs/files/app.ini
+++ b/Alpine/GoGS/roles/alpine_gogs/files/app.ini
@@ -1,5 +1,5 @@
 APP_NAME = Gogs
-RUN_USER = root
+RUN_USER = git
 RUN_MODE = prod
 
 [database]
@@ -12,7 +12,7 @@ SSL_MODE = disable
 PATH     = data/gogs.db
 
 [repository]
-ROOT = /home/gogs
+ROOT = /home/git
 
 [server]
 DOMAIN           = localhost
@@ -43,7 +43,7 @@ PROVIDER = file
 [log]
 MODE      = file
 LEVEL     = Info
-ROOT_PATH = /var/log
+ROOT_PATH = /var/log/gogs
 
 [security]
 INSTALL_LOCK = true
