Added an CORS option

--- a/Alpine/Elasticsearch/Provision.yml
+++ b/Alpine/Elasticsearch/Provision.yml
@@ -3,7 +3,7 @@
 - hosts: dev-es-01
   become: true
   roles:
-    - { role: alpine_elasticsearch, es_listen_addr: "{{ ansible_eth1.ipv4.address }}" }
+    - { role: alpine_elasticsearch, es_listen_addr: "{{ ansible_eth1.ipv4.address }}", es_cors: true }
 
 - hosts: dev-es-02,dev-es-03,dev-es-04
   become: true
