--- a/Alpine/Netdata/Vagrantfile
+++ b/Alpine/Netdata/Vagrantfile
@@ -2,8 +2,8 @@ cluster = [ { :name => "dev-netdata-01", :ip => "10.0.0.40" , :net => "dev.net"}
 
 Vagrant.configure("2") do |config|
   config.vm.provider "virtualbox" do |vb|
-    vb.memory = 2048
-    vb.cpus = 2
+    vb.memory = 1024
+    vb.cpus = 1
     vb.linked_clone = true
  end
 
@@ -13,6 +13,7 @@ Vagrant.configure("2") do |config|
     config.vm.define node[:name] do |config|
       config.vm.hostname = node[:name]
       config.vm.network "private_network", ip: node[:ip], netmask: "255.255.255.0", virtualbox_intnet: node[:net]
+      config.vm.network "forwarded_port", guest: 19999, host: 19999
       config.vm.provision "ansible", playbook: "Provision.yml"
     end
  end
