Changes IP and IP of ES to connect to

--- a/Alpine/Dev/Provision.yml
+++ b/Alpine/Dev/Provision.yml
@@ -3,9 +3,11 @@
 - hosts: dev-host01
   become: true
   tasks:
-  - name: Install Curl
+  - name: update the apk cache
     apk: 
-      name: curl
-      state: present
+      update_cache: yes
+  - name: upgrade the packages
+    apk: 
+      upgrade: yes
 
 ...
