--- a/Alpine/PostgreSQL/roles/alpine_postgresql/meta/main.yml
+++ b/Alpine/PostgreSQL/roles/alpine_postgresql/meta/main.yml
@@ -1,12 +1,11 @@
 galaxy_info:
   author: Alain van Hoof
-  description: Graphite-API for Alpine Linux
+  description: PostgreSQL for Alpine Linux
   license: license (GPLv2, CC-BY, etc)
   min_ansible_version: 2.0
   platforms:
     - name: Alpine
   galaxy_tags: 
     - alpine
-    - graphite
-    - graphite-api
+    - postgresql
   dependencies: []
