--- a/Alpine/PowerDNS/roles/alpine_postgresql/tasks/main.yml
+++ b/Alpine/PowerDNS/roles/alpine_postgresql/tasks/main.yml
@@ -5,18 +5,26 @@
   apk:
     name: postgresql
     state: present
+    update_cache: yes
 
 - name: Install Python PostgreSQL module
   apk:
     name: py-psycopg2
     state: present
+    update_cache: yes
 
 - name: Start PostgreSQL
   service:
     name: postgresql
     state: started
     enabled: true
-  when: pg_standby is undefined
+#  when: pg_standby is undefined
+
+- name: Stop PostgreSQL on Standby
+  service:
+    name: postgresql
+    state: stopped
+  when: pg_standby is defined
 
 - name: Create Replication User (primary)
   postgresql_user:
@@ -50,13 +58,13 @@
 
 - name: Allow Replication user to connect from standby
   lineinfile:
-    dest: "{{ pg_data_dir }}/pg_hba.conf"
+    dest: "/etc/postgresql/pg_hba.conf"
     line: 'host     replication     {{ pg_repl_user }}         {{ pg_standby_addr }}/32        md5'
   when: pg_primary is defined
 
 - name: Change wal_level to replica
   lineinfile:
-    dest: '{{ pg_data_dir }}/postgresql.conf'
+    dest: '/etc/postgresql/postgresql.conf'
     regexp: '.*wal_level =.*'
     line: 'wal_level = replica'
   when: pg_primary is defined
@@ -64,7 +72,7 @@
 
 - name: Change archive_mode to on
   lineinfile:
-    dest: '{{ pg_data_dir }}/postgresql.conf'
+    dest: '/etc/postgresql/postgresql.conf'
     regexp: '.*archive_mode =.*'
     line: 'archive_mode = on'
   when: pg_primary is defined
@@ -72,7 +80,7 @@
 
 - name: Change archive_command 
   lineinfile:
-    dest: '{{ pg_data_dir }}/postgresql.conf'
+    dest: '/etc/postgresql/postgresql.conf'
     regexp: '.*archive_command =.*'
     line: "archive_command = 'test ! -f {{ pg_data_dir }}/archive/%f && cp %p {{ pg_data_dir }}/%f'"
   when: pg_primary is defined
@@ -80,7 +88,7 @@
 
 - name: Change max_wal_senders
   lineinfile:
-    dest: '{{ pg_data_dir }}/postgresql.conf'
+    dest: '/etc/postgresql/postgresql.conf'
     regexp: '.*max_wal_senders =.*'
     line: 'max_wal_senders = 3'
   when: pg_primary is defined
@@ -88,10 +96,10 @@
 
 - name: Change hot_standby
   lineinfile:
-    dest: '{{ pg_data_dir }}/postgresql.conf'
+    dest: '/etc/postgresql/postgresql.conf'
     regexp: '.*hot_standby =.*'
     line: 'hot_standby = on'
-  when: pg_primary is defined
+  when: pg_primary is defined or pg_standby is defined
   notify: Restart postgresql
 
 - stat: path={{ pg_data_dir }}/recovery.conf
@@ -125,7 +133,7 @@
 
 - name: Change listen_addresses
   lineinfile:
-    dest: "{{ pg_data_dir }}/postgresql.conf"
+    dest: "/etc/postgresql//postgresql.conf"
     regexp: '.*listen_addresses =.*'
     line: "listen_addresses = {{ pg_listen_addr }}"
   notify: Restart postgresql
