--- a/Alpine/Grafana/Vagrantfile
+++ b/Alpine/Grafana/Vagrantfile
@@ -13,6 +13,7 @@ Vagrant.configure("2") do |config|
     config.vm.define node[:name] do |config|
       config.vm.hostname = node[:name]
       config.vm.network "private_network", ip: node[:ip], netmask: "255.255.255.0", virtualbox_intnet: node[:net]
+      config.vm.network "forwarded_port", guest: 3000, host: 3000
       config.vm.provision "ansible", playbook: "Provision.yml"
     end
  end
