--- a/Alpine/Kibana/Vagrantfile
+++ b/Alpine/Kibana/Vagrantfile
@@ -13,7 +13,9 @@ Vagrant.configure("2") do |config|
     config.vm.define node[:name] do |config|
       config.vm.hostname = node[:name]
       config.vm.network "private_network", ip: node[:ip], netmask: "255.255.255.0", virtualbox_intnet: node[:net]
+      config.vm.network "forwarded_port", guest: 5601, host: 5601
       config.vm.provision "ansible", playbook: "Provision.yml"
     end
  end
 end
+
